tests/lean/669.lean
check (λ {T : Prop} (t : T), t) bool.tt
